--- a/XGile2/appveyor.yml
+++ b/XGile2/appveyor.yml
@@ -1,11 +1,5 @@
-version: 1.0.{build}
-before_build:
-- cmd: nuget restore
-build:
-  publish_wap: true
-  verbosity: minimal
-  deploy:
-	provider: Environment
-	name: XGile2
-	on:
+deploy:
+provider: releases
+name: XGile2
+on:
 branch: master
