--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ build:
   publish_wap: true
   verbosity: minimal
 deploy:
-- provider: Environment
+provider: Environment
 name: XGile2
 on:
 branch: master
