--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,12 @@ before_build:
 build:
   publish_wap: true
   verbosity: minimal
+  artifacts:
+- path: /
+  name: XGile2
+  type: WebDeployPackage
 deploy:
-provider: Environment
-name: XGile2
-on:
-branch: master
+  - provider: Environment
+    name: XGile2
+    on:
+       branch: master
